testdata/golden/sema/invalid/concurrency/nosend_nested.sg
// ERROR: struct containing @nosend field cannot be sent to spawn

@nosend
pub type Database = {
    connection: int,
};

pub type AppState = {
    db: Database,
    counter: int,
};

pub fn spawn_with_nested_nosend() -> Task<int> {
    let state: AppState = { db: { connection: 1 }, counter: 0 };
    // ERROR SEM3086: type 'AppState' contains @nosend field of type 'Database'; use @local spawn
    return spawn async {
        return state.counter;
    };
}
